{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 142,
  "lineage": "6280b5f1-7fad-a7d1-6cef-8d6eba1175bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:internet-gateway/igw-0edc7a437b16c8105",
            "id": "igw-0edc7a437b16c8105",
            "owner_id": "010978120347",
            "tags": {
              "Name": "igw_name_tag"
            },
            "tags_all": {
              "Name": "igw_name_tag"
            },
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_for_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:route-table/rtb-0f67a9d5566c6b69c",
            "id": "rtb-0f67a9d5566c6b69c",
            "owner_id": "010978120347",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_for_db_tag"
            },
            "tags_all": {
              "Name": "private_for_db_tag"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:route-table/rtb-08186400e18f594d6",
            "id": "rtb-08186400e18f594d6",
            "owner_id": "010978120347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0edc7a437b16c8105",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_route_table_tag"
            },
            "tags_all": {
              "Name": "pub_route_table_tag"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_asso_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cad694a150287d78",
            "route_table_id": "rtb-08186400e18f594d6",
            "subnet_id": "subnet-0a36b6159689b427c"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.pub_route_table",
            "aws_subnet.public_sub_1",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_asso_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f16dded3d3c1cca",
            "route_table_id": "rtb-08186400e18f594d6",
            "subnet_id": "subnet-0f702d42c78d4bc77"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.pub_route_table",
            "aws_subnet.public_sub_2",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_db_rt_asso_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051507aa06dc9d7a5",
            "route_table_id": "rtb-0f67a9d5566c6b69c",
            "subnet_id": "subnet-06b6958fbe4ba6a52"
          },
          "dependencies": [
            "aws_route_table.private_rt_for_db",
            "aws_subnet.private_sub_db_1",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_db_rt_asso_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096d75bba00ee3f03",
            "route_table_id": "rtb-0f67a9d5566c6b69c",
            "subnet_id": "subnet-051b8fe59d57f6f77"
          },
          "dependencies": [
            "aws_route_table.private_rt_for_db",
            "aws_subnet.private_sub_db_2",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_secgp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:security-group/sg-01792d5d4931b750b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01792d5d4931b750b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "010978120347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecurityGroup"
            },
            "tags_all": {
              "Name": "SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:subnet/subnet-06b6958fbe4ba6a52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b6958fbe4ba6a52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010978120347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub_db_1_tag"
            },
            "tags_all": {
              "Name": "private_sub_db_1_tag"
            },
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:subnet/subnet-051b8fe59d57f6f77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051b8fe59d57f6f77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010978120347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_sub_db_2_tag"
            },
            "tags_all": {
              "Name": "private_sub_db_2_tag"
            },
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:subnet/subnet-0a36b6159689b427c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a36b6159689b427c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010978120347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub_1_tag"
            },
            "tags_all": {
              "Name": "public_sub_1_tag"
            },
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:subnet/subnet-0f702d42c78d4bc77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f702d42c78d4bc77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010978120347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_sub_2_tag"
            },
            "tags_all": {
              "Name": "public_sub_2_tag"
            },
            "vpc_id": "vpc-089f9c79921b1cd7a"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.aws_avz"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010978120347:vpc/vpc-089f9c79921b1cd7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002d2eae9a1dfeced",
            "default_route_table_id": "rtb-0e15566bc73962db4",
            "default_security_group_id": "sg-0bc9459803edb9f5d",
            "dhcp_options_id": "dopt-0947cb5db60337ffa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-089f9c79921b1cd7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e15566bc73962db4",
            "owner_id": "010978120347",
            "tags": {
              "Name": "vpc_name_tag"
            },
            "tags_all": {
              "Name": "vpc_name_tag"
            }
          }
        }
      ]
    }
  ]
}